--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,16 @@
 }
 
 .sort_by {
-  /* display: flex;
+  display: flex;
   flex-direction: column;
+  margin: 0 auto;
   text-align: center;
-  justify-content: center; */
-  padding-bottom: 50px;
+  max-width: 33%;
+}
+
+.back_btn {
+  background-color: red;
+  color: white;
+  border: none;
+  padding: 10px 15px 10px 15px;
 }
